2021.??.??
  * Added support for rtorrent
  * Added support for qBittorrent
  * Purge <script> tags from cached HTML (reduces size by ~40%)
  * submit/torrent-create: Added --reuse-torrent/-t option to get piece hashes
    from an existing torrent instead of hashing all the content (this happens
    automatically when torrents are created with upsies)
  * bB: Submit generated screenshots and mediainfo when a custom description is
    given for a season or episode submission with --description
  * bB: Normalize tags provided through --tags or entered in the TUI
  * Configuration options are now better documented (upsies set -h)


2021.11.09
  * Removed debugging print()


2021.11.08
  * submit: CLI options have changed (see `upsies submit <TRACKER> -h`)
  * Re-use hashed pieces from previously generated torrents if possible
  * Fixed finding the latest release for update checking
  * bB: New --description option takes a custom description text or the path to
    a text file
  * bB: New --tags option takes a custom list of comma-separated tags
  * bB: Improved automatic sample exclusion
  * Added support for 2in1 and (4k)Remastered/Restored tags


2021.10.23
  * Fixed stuck/unresponsive "Scene Check" yes/no prompt when PreDB is down
  * Try to find release on SrrDB if PreDB is down before prompting user
  * Added "User Manual" and "CLI Reference" to documentation
  * Added support for freeimage.host and imgbb.com
  * Thumbnails are now supported for all image hosters
  * Fixed empty title in search results when searching for IMDb ID


2021.10.04
  * screenshots: Fix --upload-to/-u option (Thanks to @ctlaltdefeat)
  * Display remaining time and other information while creating the torrent


2021.09.11
  * torrent-create and submit: Add --exclude-files/--ef and
    --exclude-files-regex/--efr options that exclude files from the generated
    torrent that aren't already excluded by the trackers.TRACKER.exclude option